@@ -37,10 +37,16 @@ class Configuration implements ConfigurationInterface
                     ->scalarNode('use_cache_in_stylesheet')
                       ->defaultValue(true)
                     ->end()
+                    ->scalarNode('nodes_file')
+                      ->defaultNull()
+                    ->end()
                     ->scalarNode('fonts_file')
                       ->defaultNull()
                     ->end()
-                    ->scalarNode('enhancements_file')
+                    ->scalarNode('complex_attributes_file')
+                      ->defaultNull()
+                    ->end()
+                    ->scalarNode('colors_file')
                       ->defaultNull()
                     ->end()
                     ->scalarNode('markdown_stylesheet_filepath')
